fix header logo spacing and size

--- a/themes/wreckeys/source/css/_header.styl
+++ b/themes/wreckeys/source/css/_header.styl
@@ -25,6 +25,9 @@ header {
 
   .header-home {
     background: none;
+    margin: 0;
+    padding: 0;
+    font-size: 1em;
   }
 
   picture {
@@ -34,6 +37,8 @@ header {
   }
 
   a {
+    display: block;
+
     &:hover, &:active, &:focus {
       background: none;
     }
